--- a/src/@modules/Header/style.module.css
+++ b/src/@modules/Header/style.module.css
@@ -21,6 +21,7 @@
   position: absolute;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   top: 0;
   left: 0;
@@ -29,7 +30,6 @@
   height: 100vh;
   min-width: 320rem;
   min-height: 500rem;
-  padding-top: 163rem;
   background-color: rgba(0, 0, 0, 0.9);
   transform: translateY(-100%);
   transition: transform 200ms linear;
@@ -50,7 +50,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  left: 86%;
+  left: calc(100vw - 52rem);
   z-index: 2;
   width: 22rem;
   height: 17rem;
@@ -81,11 +81,35 @@
   transform: translateY(-7rem) rotate(-45deg);
 }
 
-.alignLeft {
-  left: 8%;
+@media (min-width: 768px) {
+  .wrapper {
+    min-height: 78rem;
+  }
+
+  .item {
+    font-size: 52rem;
+  }
+
+  .burger {
+    width: 50rem;
+    height: 35rem;
+    left: calc(100vw - 80rem);
+  }
+
+  .burgerLine {
+    height: 5rem;
+  }
+
+  .navActive .burgerLine:first-child {
+    transform: translateY(15rem) rotate(45deg);
+  }
+
+  .navActive .burgerLine:last-child {
+    transform: translateY(-14rem) rotate(-45deg);
+  }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   .wrapper {
     justify-content: center;
     padding: 10rem 80rem 0;
@@ -97,7 +121,6 @@
     width: auto;
     height: auto;
     min-height: 100%;
-    padding: 0;
     background-color: transparent;
     transform: none;
     transition: none;
@@ -115,4 +138,8 @@
   .burger {
     display: none;
   }
+}
+
+.alignLeft {
+  left: 30rem;
 }
